--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,10 @@ input {
 label {
   display: block
 }
+
+input[type="checkbox"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  cursor: pointer;
+}
